--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,11 +4,10 @@ on:
     branches:
       - master
   pull_request:
-    branches: '*'
+    branches: "*"
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -26,7 +25,7 @@ jobs:
         run: npm install -g pnpm
       - name: Install dependencies
         run: pnpm install
-      - name: create env file
+      - name: Create env file
         run: |
           touch ./packages/v3/cypress/runner/.env
           echo VITE_GOOGLE_API_KEY=${{ secrets.VITE_GOOGLE_API_KEY }} >> ./packages/v3/cypress/runner/.env
@@ -36,7 +35,6 @@ jobs:
         run: pnpm run test:e2e
 
   publish:
-
     name: npm publish
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/master'}}
@@ -59,10 +57,10 @@ jobs:
         uses: OleksiyRudenko/gha-git-credentials@v2-latest
         with:
           global: true
-          name: '${{ secrets.GH_USER }}'
-          email: '${{ secrets.GH_EMAIL }}'
-          actor: '${{ secrets.GH_FULL_NAME }}'
-          token: '${{ secrets.GITHUB_TOKEN }}'
+          name: "${{ secrets.GH_USER }}"
+          email: "${{ secrets.GH_EMAIL }}"
+          actor: "${{ secrets.GH_FULL_NAME }}"
+          token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Update origin push URI
         run: |
           git remote set-url origin "https://${{ secrets.GH_TOKEN_LERNA }}@github.com/${{ secrets.GH_USER }}/${{ secrets.GH_REPOSITORY }}.git" > /dev/null 2>&1
