--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -71,6 +71,7 @@
     "@types/google.maps": "^3.53.2",
     "@types/jsdom": "^21.1.1",
     "@types/lodash.isequal": "^4.5.6",
+    "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^20.2.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitest/coverage-c8": "^0.31.1",
@@ -89,6 +90,7 @@
     "happy-dom": "^9.20.3",
     "jsdom": "^22.0.0",
     "lint-staged": "^13.2.2",
+    "lodash.throttle": "^4.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
