--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "clean:build": "rimraf ./dist && rimraf ./build && rimraf ./types",
-    "dev": "vite",
+    "dev": "cpx ./cypress/runner/.env ./ --verbose && vite",
     "dev:e2e": "pnpm run build && vite --config cypress/runner/vite.config.js",
     "preview": "vite preview --port 4173",
     "build": "vite build && pnpm run copy:components",
@@ -29,7 +29,7 @@
     "test": "vitest",
     "test:unit": "vitest --environment jsdom",
     "coverage": "vitest run --coverage",
-    "test:e2e": "start-server-and-test test:e2e:vite:server http://localhost:4173/ 'pnpm exec cypress open --e2e'",
+    "test:e2e": "cypress install && start-server-and-test test:e2e:vite:server http://localhost:4173/ 'pnpm exec cypress open --e2e'",
     "test:e2e:ci": "start-server-and-test test:e2e:vite:server http://localhost:4173/ 'pnpm exec cypress run --e2e'",
     "test:e2e:build": "pnpm run build && vite build --config cypress/runner/vite.config.js",
     "test:e2e:preview": "vite preview --config cypress/runner/vite.config.js",
