test(v3): fix cypress and vitest config
Remove the type "module" from the package json to avoid issues with cypress

--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -2,7 +2,6 @@
   "name": "@gmap-vue/v3",
   "version": "1.0.3",
   "description": "This is a google map component for Vue.js, updated for Vue 2 compatibility",
-  "type": "module",
   "main": "dist/main.umd.js",
   "module": "dist/main.es.js",
   "types": "dist/types/src/main.d.ts",
@@ -98,8 +97,8 @@
     "coverage": "vitest run --coverage",
     "test:e2e": "cypress install && start-server-and-test test:e2e:vite:server http://localhost:4173/ 'pnpm exec cypress open --e2e'",
     "test:e2e:ci": "start-server-and-test test:e2e:vite:server http://localhost:4173/ 'pnpm exec cypress run --e2e'",
-    "test:e2e:build": "pnpm run build && vite build --config cypress/runner/vite.config.js",
-    "test:e2e:preview": "vite preview --config cypress/runner/vite.config.js",
+    "test:e2e:build": "pnpm run build && vite build --config cypress/runner/vite.config.mjs",
+    "test:e2e:preview": "vite preview --config cypress/runner/vite.config.mjs",
     "test:e2e:vite:server": "pnpm run test:e2e:build && pnpm run test:e2e:preview",
     "test:e2e:node:server": "pnpm run test:e2e:build && node cypress/runner/runner.cjs",
     "lint": "prettier --write ./src && eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
