--- a/packages/v3/tsconfig.config.json
+++ b/packages/v3/tsconfig.config.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.json",
-  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*"],
+  "include": ["vite.config.mts", "vitest.config.mts", "cypress.config.*"],
   "compilerOptions": {
     "composite": true,
     "types": ["node"]
