--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "serve:docs": "pnpm run --recursive gen:api:docs && pnpm run --recursive serve:docs",
     "build:all": "pnpm run --recursive gen:api:docs && pnpm run --recursive build && pnpm run --recursive build:docs",
-    "test": "pnpm run --recursive test",
+    "test": "pnpm run --recursive test:ci",
     "test:e2e": "pnpm run --recursive test:e2e:ci",
     "lint": "pnpm run --recursive lint",
     "gen:api:docs": "pnpm run --recursive gen:api:docs",
