--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,9 +23,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install pnpm
-        run: npm install -g pnpm
-      - name: Install dependencies
-        run: pnpm install
+        uses: pnpm/action-setup@v3
+        with:
+          version: latest
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --ignore-scripts]
       - name: Create env file
         run: |
           touch ./packages/v3/cypress/runner/.env
@@ -36,7 +39,7 @@ jobs:
         run: pnpm run test:e2e
 
   publish:
-    name: npm publish
+    name: NPM publish
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/master'}}
     needs: [build]
@@ -48,9 +51,12 @@ jobs:
         with:
           node-version: '20.x'
       - name: Install pnpm
-        run: npm install --location=global pnpm
-      - name: Install dependencies
-        run: pnpm install
+        uses: pnpm/action-setup@v3
+        with:
+          version: latest
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --ignore-scripts]
       - name: Build package
         working-directory: ./packages/v3
         run: pnpm run build
