chore(root): remove ignore-scripts command from the first step

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,8 +26,6 @@ jobs:
         uses: pnpm/action-setup@v3
         with:
           version: 8
-          run_install: |
-            - args: [--ignore-scripts]
       - name: Create env file
         run: |
           touch ./packages/v3/cypress/runner/.env
@@ -54,7 +52,7 @@ jobs:
         with:
           version: 8
           run_install: |
-            - args: [--ignore-scripts]
+            - args: [--frozen-lockfile, --ignore-scripts]
       - name: Build package
         working-directory: ./packages/v3
         run: pnpm run build
