chore(root): update scripts on package and readme

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "repository": "git@github.com:diegoazh/gmap-vue.git",
   "author": "\"Daniel Sim, Guillaume Leclerc\",",
   "license": "MIT",
+  "packageManager": "pnpm@8.15.6",
   "scripts": {
-    "serve:docs": "pnpm run --recursive gen:api:docs && pnpm run --recursive serve:docs",
-    "build:all": "pnpm run --recursive gen:api:docs && pnpm run --recursive build && pnpm run --recursive build:docs",
+    "serve:docs": "pnpm run --filter docs start",
+    "build:all": "pnpm run --recursive build",
     "test": "pnpm run --recursive test:ci",
     "test:e2e": "pnpm run --recursive test:e2e:ci",
     "lint": "pnpm run --recursive lint",
-    "gen:api:docs": "pnpm run --recursive gen:api:docs",
     "clean": "rimraf ./packages/**/node_modules && rimraf ./packages/**/package-lock.json && rimraf ./pnpm-lock.yaml && rimraf ./node_modules",
     "prepare": "husky install"
   },
