test(v3): update unit and e2e tests
Bug: #309

--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -116,6 +116,7 @@
   "homepage": "https://github.com/diegoazh/gmap-vue#readme",
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.5.3",
+    "@vitest/coverage-v8": "^1.4.0",
     "lodash.isequal": "^4.5.0",
     "mitt": "^3.0.1",
     "vue": "^3.4.21"
