--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -135,6 +135,7 @@
     "@vitest/coverage-istanbul": "^1.4.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
     "cpx": "^1.5.0",
     "cypress": "^13.7.1",
