fix(v3): remove exposed instances because they are always undefined and cause errors with watchers and events
* test(v3): update cypress runner to use typescript

* chore(v3): add space between lines

* refactor(v3): improve function recycling code

* fix(v3): add autocomplete-key and promise deferred pattern to autocomplete component

* test(v3): add autocomplete component test

* refactor(v3): fix typo on autocomplete word

* chore(v3): remove unnecessary console log

* chore(v3): update autocomplete slot comment

* test(v3): add autocomplete and map component tests

* test(v3): add marker component test

We also improved the map and autocomplete component tests

* test(v3): add circle component test

We also improved other tests adding unmounted tests

* test(v3): add cluster icon component test

We also improve the circle shape component tests.

* test(v3): add component test for drawing-manager

We also improved mocks on other component tests

* chore(root): add launch config to debug current test with vite

* test(v3): add component test for heatmap layer

* test(v3): add component test for info-window component

* test(v3): add component test for kml-layer component

* test(v3): add component test for polygon-shape component

* test(v3): add component test for polyline-shape component

* test(v3): add component test for street-view-panorama component

* test(v3): add tests for main.ts module

* fix(v3): remove exposed instances because they are always undefined

* test(v3): fix marker e2e tests after the last changes

* fix(v3): remove undefined instances and fix watchers

Solve: #318 #319

* test(v3): add component unit tests and fix e2e tests

Solve: #320

* chore(v3): add new script to build for development

* chore(root): update lock file

* refactor(v3): move component promises into a factory function.

* chore(root): upgrade node version on gh actions and update lock file

* chore(roo

--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -87,6 +87,7 @@
     "dev:e2e": "pnpm run build && vite --config cypress/runner/vite.config.js",
     "preview": "vite preview --port 4173",
     "build": "vite build",
+    "build:dev": "vite build --mode development",
     "tsc:build": "tsc --project tsconfig.app.json",
     "vite:build": "run-p type-check build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
@@ -97,8 +98,8 @@
     "coverage": "vitest run --coverage",
     "test:e2e": "cypress install && start-server-and-test test:e2e:vite:server http://localhost:4173/ 'pnpm exec cypress open --e2e'",
     "test:e2e:ci": "start-server-and-test test:e2e:vite:server http://localhost:4173/ 'pnpm exec cypress run --e2e'",
-    "test:e2e:build": "pnpm run build && vite build --config cypress/runner/vite.config.mjs",
-    "test:e2e:preview": "vite preview --config cypress/runner/vite.config.mjs",
+    "test:e2e:build": "pnpm run build && vite build --config cypress/runner/vite.config.mts",
+    "test:e2e:preview": "vite preview --config cypress/runner/vite.config.mts",
     "test:e2e:vite:server": "pnpm run test:e2e:build && pnpm run test:e2e:preview",
     "test:e2e:node:server": "pnpm run test:e2e:build && node cypress/runner/runner.cjs",
     "lint": "prettier --write ./src && eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
@@ -135,6 +136,7 @@
     "@vitest/coverage-istanbul": "^1.4.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
     "cpx": "^1.5.0",
     "cypress": "^13.7.1",
