chore(root): update package-manager y package.json and gh workflows

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 20
       - name: Install pnpm
-        run: npm install --location=global pnpm
+        run: npm install --location=global pnpm@9.0.6
       - name: Remove pnpm-workspace.yaml
         run: rm -rf ./pnpm-workspace.yaml
       - name: Install dependencies
