--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install pnpm
-        run: npm install -g pnpm
+        run: npm install -g pnpm@9.0.6
       - name: Install dependencies
         run: pnpm install
       - name: Create env file
