--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -153,6 +153,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
+    "sanitize-filename": "^1.6.3",
     "semantic-release": "^23.0.6",
     "semantic-release-cli": "^5.4.6",
     "start-server-and-test": "^2.0.3",
