--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install pnpm
-        run: npm install -g pnpm@9.0.6
+        run: npm install -g pnpm@9.13.2
       - name: Install dependencies
         run: pnpm install
       - name: Create env file
@@ -46,7 +46,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
       - name: Install pnpm
         run: npm install --location=global pnpm
       - name: Install dependencies
