--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -2,6 +2,7 @@
   "name": "@gmap-vue/v3",
   "version": "2.1.2",
   "description": "This is a google map component for Vue.js, updated for Vue 2 compatibility",
+  "type": "module",
   "main": "dist/main.umd.js",
   "module": "dist/main.es.js",
   "types": "dist/types/src/main.d.ts",
@@ -63,10 +64,12 @@
     },
     "./components": {
       "import": {
-        "types": "./dist/types/src/components/index.d.ts"
+        "types": "./dist/types/src/components/index.d.ts",
+        "default": "./dist/src/components.cjs.js"
       },
       "require": {
-        "types": "./dist/types/src/components/index.d.ts"
+        "types": "./dist/types/src/components/index.d.ts",
+        "default": "./dist/src/components.es.js"
       }
     },
     "./dist/style.css": {
@@ -102,7 +105,7 @@
     "test:e2e:preview": "vite preview --config cypress/runner/vite.config.mts",
     "test:e2e:vite:server": "pnpm run test:e2e:build && pnpm run test:e2e:preview",
     "test:e2e:node:server": "pnpm run test:e2e:build && node cypress/runner/runner.cjs",
-    "lint": "prettier --write ./src && eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "prettier --write ./src && eslint . --fix",
     "lint-staged": "lint-staged",
     "emulate:package": "rimraf ./.pack && pnpm run build && cpx './dist/**/*.{js,mjs,css,ts,vue}' './.pack/dist' --verbose && cpx './CHANGELOG.md' './.pack' --verbose && cpx './LICENSE.md' './.pack' --verbose && cpx './package.json' './.pack' --verbose",
     "release": "semantic-release"
@@ -117,52 +120,61 @@
   "homepage": "https://github.com/diegoazh/gmap-vue#readme",
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.5.3",
-    "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/coverage-v8": "^2.1.5",
+    "globals": "^15.12.0",
     "lodash.isequal": "^4.5.0",
     "mitt": "^3.0.1",
-    "vue": "^3.4.22"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.9.0",
+    "@eslint/js": "^9.14.0",
+    "@rushstack/eslint-patch": "^1.10.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/google.maps": "^3.55.5",
-    "@types/jsdom": "^21.1.6",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/google.maps": "^3.58.1",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash.isequal": "^4.5.8",
     "@types/lodash.throttle": "^4.1.9",
-    "@types/node": "^20.11.30",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@types/node": "^22.9.0",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vitest/coverage-c8": "^0.33.0",
-    "@vitest/coverage-istanbul": "^1.4.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
-    "@vue/test-utils": "^2.4.5",
-    "@vue/tsconfig": "^0.5.1",
+    "@vitest/coverage-istanbul": "^2.1.5",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.6.0",
     "cpx": "^1.5.0",
-    "cypress": "^13.7.1",
+    "cypress": "^13.15.2",
     "cypress-plugin-tab": "^1.0.5",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
-    "eslint-plugin-cypress": "^2.15.1",
+    "eslint": "^9.14.0",
+    "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "gh-pages": "^6.1.1",
-    "happy-dom": "^15.11.0",
-    "jsdom": "^24.0.0",
-    "lint-staged": "^15.2.2",
+    "eslint-plugin-vue": "^9.31.0",
+    "gh-pages": "^6.2.0",
+    "happy-dom": "^15.11.4",
+    "jsdom": "^25.0.1",
+    "lint-staged": "^15.2.10",
     "lodash.throttle": "^4.1.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.5",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "sanitize-filename": "^1.6.3",
-    "semantic-release": "^23.0.6",
+    "semantic-release": "^24.2.0",
     "semantic-release-cli": "^5.4.6",
-    "start-server-and-test": "^2.0.3",
-    "stylus": "^0.63.0",
-    "typescript": "~5.4.3",
-    "vite": "^5.2.6",
-    "vite-plugin-dts": "^3.8.0",
-    "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.7"
+    "start-server-and-test": "^2.0.8",
+    "stylus": "^0.64.0",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.14.0",
+    "vite": "^5.4.11",
+    "vite-plugin-dts": "^4.3.0",
+    "vite-plugin-vue-devtools": "^7.5.4",
+    "vitest": "^2.1.5",
+    "vue-eslint-parser": "^9.4.3",
+    "vue-tsc": "^2.1.10"
   },
   "author": "Diego A. Zapata Häntsch, Daniel Sim, Guillaume Leclerc",
   "license": "MIT"
