chore(root): update node to latest lts on gh actions, update husky hooks, and update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,14 @@
   "cSpell.words": [
     "closeclick",
     "Clusterer",
+    "commitlint",
     "composables",
     "gmap",
     "markerclusterer",
     "Midx",
     "pano",
     "rightclick",
+    "VITE",
     "zindex"
   ]
 }
