--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
   build:
     name: Build Project
     runs-on: macos-latest
+    needs: [cache-and-install]
 
     steps:
       - uses: actions/checkout@v4
@@ -50,6 +51,7 @@ jobs:
   test:
     name: Build project
     runs-on: ${{ matrix.os }}
+    needs: [cache-and-install, build]
 
     strategy:
       matrix:
@@ -77,7 +79,7 @@ jobs:
   publish:
     name: NPM publish
     runs-on: macos-latest
-    needs: [build]
+    needs: [cache-and-install, build, test]
     if: ${{ github.ref == 'refs/heads/master'}}
 
     steps:
