--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,20 +14,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - uses: pnpm/action-setup@v4
         name: Install pnpm
         with:
           run_install: false
-
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
           cache: 'pnpm'
-
       - name: Install dependencies
         run: pnpm install
+      - name: Upload pnpm-lock.yaml as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: pnpm-lock
+          path: pnpm-lock.yaml
     outputs:
       lock-file: ./pnpm-lock.yaml
 
@@ -42,13 +44,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
+      - name: Download pnpm-lock.yaml artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: pnpm-lock
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts
       - name: Build package
         working-directory: ./packages/v3
         run: pnpm run build
-    outputs:
-      dist-folder: ./packages/v3/dist
+      - name: Upload dist as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: ./packages/v3/dist
 
   test:
     name: Build project
@@ -67,8 +76,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install pnpm
-        run: npm install -g pnpm@9.15.2
+      # - name: Install pnpm
+      #   run: npm install -g pnpm@9.15.2
       - name: Install dependencies
         run: pnpm install
       - name: Create env file
@@ -90,6 +99,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22.x"
+      - name: Download pnpm-lock.yaml artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: pnpm-lock
+      - name: Download dist artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts
       - name: Configure git credentials
