--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -65,13 +65,42 @@ jobs:
           path: ./packages/v3/dist
 
   test:
-    name: Build project
+    name: Test project on mac and linux
     runs-on: ${{ matrix.os }}
     needs: [cache-and-install, build]
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [macos-latest, ubuntu-latest]
+        node-version: [18.x, 20.x, 22.x]
+        test-plan: [test, "test:e2e"]
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          run_install: false
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+        run: pnpm install
+      - name: Create env file
+        run: |
+          touch ./packages/v3/cypress/runner/.env
+          echo VITE_GOOGLE_API_KEY=${{ secrets.VITE_GOOGLE_API_KEY }} >> ./packages/v3/cypress/runner/.env
+      - name: Run Test Plan
+        run: pnpm run ${{ matrix.test-plan }}
+
+  test-for-windows:
+    name: Test project on windows
+    runs-on: windows-latest
+    needs: [cache-and-install, build]
+
+    strategy:
+      matrix:
         node-version: [18.x, 20.x, 22.x]
         test-plan: [test, "test:e2e"]
 
