--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   install-and-cache:
     name: Install dependencies
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -36,7 +36,7 @@ jobs:
 
   build:
     name: Build Project
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     needs: [install-and-cache]
 
     steps:
@@ -97,7 +97,7 @@ jobs:
 
   publish:
     name: NPM publish
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     needs: [install-and-cache, build, test]
     if: ${{ github.ref == 'refs/heads/master'}}
 
