--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,7 +66,7 @@ jobs:
           path: ./packages/v3/dist
 
   test:
-    name: Test project on linux and windows
+    name: Test project
     runs-on: ${{ matrix.os }}
     needs: [install-and-cache, build]
 
